Fixed checkbox align in contract-planning and order-list
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C26376

--- a/ShipTech10/app/app-general-components/assets/css/custom.css
+++ b/ShipTech10/app/app-general-components/assets/css/custom.css
@@ -469,17 +469,18 @@ th#master_list_table_cb .cbox, th#master_list_table_cb .s-ico {
     padding-right: 10px;
 }
 
+.ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td:nth-child(2) {
+    padding: 0px;
+}
+
 .ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td[aria-describedby*="_action"] {
     padding-left: 5px;
 }
-.ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td[aria-describedby*="flat_orders_list_actions"] {
+.ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td[aria-describedby*="flat_orders_list_actions"]:nth-child(1){
     padding-left: 15px;
 }
 .ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td[aria-describedby*="flat_contract_planning_actions"] {
     padding-left: 10px;
-}
-.ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td:nth-child(2) {
-    padding: 0px;
 }
 
 .ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td[aria-describedby*="_cb"] {
